@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.7.23
-Date: 2017-06-15
+Version: 1.7.24
+Date: 2017-06-16
 Authors@R: c(person("Markus", "Riester", role=c("aut", "cre"),
         email="markus.riester@novartis.com"),
     person("Angad P.", "Singh", role="aut"))
@@ -29,6 +29,7 @@ Imports:
     utils,
     SummarizedExperiment,
     GenomeInfoDb,
+    GenomicFeatures,
     Rsamtools,
     Biostrings,
     BiocGenerics,
