@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(annotateTargets)
 export(autoCurateResults)
 export(bootstrapResults)
 export(calculateBamCoverageByInterval)
@@ -45,6 +46,8 @@ importFrom(GenomeInfoDb,genomeStyles)
 importFrom(GenomeInfoDb,seqlevelsStyle)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomeInfoDb,sortSeqlevels)
+importFrom(GenomicFeatures,exonsByOverlaps)
+importFrom(GenomicFeatures,transcriptsByOverlaps)
 importFrom(GenomicRanges,GRanges)
 importFrom(GenomicRanges,tile)
 importFrom(RColorBrewer,brewer.pal)
