@@ -102,55 +102,64 @@ and in general require no post-processing. \Biocpkg{PureCN} can handle
 mode.  Experimental support for \software{MuTect 2} and \software{FreeBayes}
 VCFs generated in tumor-only mode is available.  
 
-\subsection{Coverage data}
-\label{gatkcoverage}
+\subsection{Target information}
+
 For the default segmentation function provided by \Biocpkg{PureCN}, the
 algorithm first needs to calculate log-ratios of tumor vs. normal control
-coverage.  Coverage data needs to be provided in \software{GATK
-DepthOfCoverage} format\footnote{\software{GATK} will generate additional
-columns which are not shown here and which \Biocpkg{PureCN} will ignore when
-provided}:
+coverage. To do this, we need to know the locations of the captured genomic
+regions (targets). These are provided by the manufacturer of your capture
+kit\footnote{While \Biocpkg{PureCN} can use a pool of normal samples to learn
+which intervals are reliable and which not, it is highly recommended to provide
+the correct intervals. Garbage in, garbage out.}.  
 
-\begin{verbatim}
-    Target  total_coverage  average_coverage    
-    chr1:69091-70009    0   0   0   
-    chr1:367659-368598  6358    9.25    
-    chr1:621096-622035  6294    9.16    
-\end{verbatim}
-
-The intervals define the captured genomic regions (targets) and are provided by
-the manufacturer of your capture kit\footnote{While \Biocpkg{PureCN} can use a
-pool of normal samples to learn which intervals are reliable and which not, it
-is highly recommended to provide the correct intervals. Garbage in, garbage
-out.}.  Default parameters assume that these intervals do NOT include a
+Default parameters assume that these intervals do NOT include a
 "padding" to include flanking regions of targets.  \Biocpkg{PureCN} will
 automatically include variants in the 50bp flanking regions if the variant
 caller was either run without interval file or with interval padding (See
 section~\ref{faqinput}). Please double check that the genome version of the
 interval file matches the reference.
 
-It is recommended to GC-normalize coverage (how this done is described later in
-Section~\ref{secgcbias}). The GC-content for each target is expected in
-\software{GATK GCContentByInterval} format:
+\Biocpkg{PureCN} will attempt to optimize the targets for copy number calling:
 
-\begin{verbatim}
-    Target    gc_bias    Gene
-    chr1:69091-70009    0.427638737758433    OR4F5
-    chr1:367659-368598    0.459574468085106    OR4F29
-    chr1:621096-622035    0.459574468085106    OR4F3
-\end{verbatim}
+\begin{itemize} 
+\item Large targets are splitted to obtain a higher resolution
+\item Targets in regions of low mappability are dropped
+\item Optionally, accessible regions inbetween the targets (off-target) regions
+are included so that available coverage information  in on- and off-target
+reads can be used by the segmentation function.
+\end{itemize}
 
-The \Rcode{Gene} column is optional and only required for providing gene-level
-copy number and LOH calls. This information should be available in the
-technical documentation of your capture kit.  The command line script described
-in Section~\ref{cmdinterval} will attempt to annotate the intervals with
-symbols.
+It further annotate targets by GC-content (how coverage is normalized is
+described later in Section~\ref{secgcbias}). 
 
-\subsection{Generating coverage data without \software{GATK}}
+\Biocpkg{PureCN} provides the \Rfunction{calculateGCContentByInterval} 
+function:
+
+<<examplegc>>=
+reference.file <- system.file("extdata", "ex2_reference.fa", 
+    package = "PureCN", mustWork = TRUE)
+bed.file <- system.file("extdata", "ex2_intervals.bed", 
+        package = "PureCN", mustWork = TRUE)
+mappability.file <- system.file("extdata", "ex2_mappability.bigWig", 
+        package = "PureCN", mustWork = TRUE)
+
+intervals <- import(bed.file)
+mappability <- import(mappability.file)
+
+calculateGCContentByInterval(intervals, reference.file, 
+    mappability=mappability, output.file = "ex2_gc_file.txt")
+@
+
+The command line script described in Section~\ref{cmdinterval} provides
+convenient access to this function and also attempts to annotate the intervals
+with symbols using the \Rfunction{annotateTargets} function.
+
+\subsection{Coverage data}
 \label{purecncoverage}
 
 The \Rfunction{calculateBamCoverageByInterval} function can be used to generate
-the required coverage data from BAM files:
+the required coverage data from BAM files. All we need to do is to provide the
+desired intervals (as generated by \Rfunction{calculateGCContentByInterval}):
 
 <<examplecoverage>>=
 bam.file <- system.file("extdata", "ex1.bam", package="PureCN", 
@@ -162,30 +171,14 @@ calculateBamCoverageByInterval(bam.file=bam.file,
  interval.file=interval.file, output.file="ex1_coverage.txt")
 @
 
-To calculate GC-content, \Biocpkg{PureCN} provides the 
-\Rfunction{calculateGCContentByInterval} function:
+\subsection{Third-party coverage tools}
+\label{gatkcoverage}
 
-<<examplegc>>=
-interval.file <- system.file("extdata", "ex2_intervals.txt", 
-        package = "PureCN", mustWork = TRUE)
-reference.file <- system.file("extdata", "ex2_reference.fa", 
-    package = "PureCN", mustWork = TRUE)
-calculateGCContentByInterval(interval.file, reference.file, 
-    output.file = "ex2_gc_file.txt")
-@
-
-\Rfunction{calculateGCContentByInterval} can also be used 
-to create an interval file from a BED file for example:
-
-<<examplegc2>>=
-bed.file <- system.file("extdata", "ex2_intervals.bed", 
-        package = "PureCN", mustWork = TRUE)
-
-intervals <- import(bed.file)
-
-calculateGCContentByInterval(intervals, reference.file, 
-    output.file = "ex2_gc_file.txt")
-@
+Generating coverage from BAM files is a common task. \Biocpkg{PureCN} currently
+supports coverage files generated by \software{GATK DepthOfCoverage} and by
+\software{CNVkit}. By providing files with standard file extension,
+\Biocpkg{PureCN} will automatically detect the correct format and all following
+steps are the same for all tools.
 
 \subsection{Third-party segmentation tools}
 
@@ -1397,7 +1390,10 @@ Figure~\ref{figure/figureexample2-1}:
     \item For problems related to generating valid coverage data, either consult
     the \software{GATK} manual for the \software{DepthOfCoverage} tool or
     Section~\ref{purecncoverage} for the equivalent function in
-    \Biocpkg{PureCN}.
+    \Biocpkg{PureCN}. If you use \software{DepthOfCoverage} and off-target
+    intervals as generated by IntervalFile.R (Section~\ref{cmdinterval}), make
+    sure to run it with parameters \Rcode{ --omitDepthOutputAtEachBase} and
+    \Rcode{--interval\_merging OVERLAPPING\_ONLY}.
     \item Currently only VCF files generated by \software{MuTect 1} are
         officially supported and well tested. A minimal example 
         \software{MuTect} call would be:
